# proto-serialization-comparison

./: .gitmodules  CMakeLists.txt  README.md  benchmark.cpp  main.cpp
proto-definitions/: CMakeLists.txt  test.capnp  test.proto
